POR/RefEdge/src/objects/Unspecified_Request__c.object
<CustomObject>
    <description>Unspecified Request associating with Reference Requests without accounts(Bound 3)</description>
    <fields>
        <fullName>Community_Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Invite</label>
        <referenceTo>Community_Invite__c</referenceTo>
        <relationshipLabel>Unspecified Requests</relationshipLabel>
        <relationshipName>Unspecified_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Participate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Influitive_Challenge_Id__c</fullName>
        <label>Influitive Challenge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influitive_Challenge_Status__c</fullName>
        <label>Influitive Challenge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unpublish</fullName>
                </value>
                <value>
                    <fullName>Publish</fullName>
                </value>
                <value>
                    <fullName>UnArchive</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PO_Unspecified_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Owner_f__c</fullName>
        <formula>Project_Owner__r.FirstName &amp; &quot; &quot; &amp; Project_Owner__r.LastName</formula>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Additional_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request Additional Info</label>
        <referenceTo>Reference_Request_Additional_Info__c</referenceTo>
        <relationshipLabel>Unspecified Requests</relationshipLabel>
        <relationshipName>Unspecified_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Unspecified Requests</relationshipLabel>
        <relationshipName>Unspecified_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Type_Needed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Type Needed</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Referenceability_Type__c.Project_type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Referenceability_Type__c.Request_type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Unspecified Requests</relationshipLabel>
        <relationshipName>Unspecified_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Type_Needed_f__c</fullName>
        <formula>Reference_Type_Needed__r.Name</formula>
        <label>Reference Type Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Feed_Item_Ids__c</fullName>
        <label>Related Feed Item Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Notes__c</fullName>
        <label>Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unspecified_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specified_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Specified Account</label>
        <referenceTo>Reference_Request_Account__c</referenceTo>
        <relationshipLabel>Unspecified Requests</relationshipLabel>
        <relationshipName>Unspecified_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Unspecified Request Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unspecified_Request_Status__c</fullName>
        <label>Unspecified Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reference Match</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Unspecified Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference_Request__c</columns>
        <columns>Deadline__c</columns>
        <columns>Requester__c</columns>
        <columns>Request_Notes__c</columns>
        <columns>Specified_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UR-{00000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unspecified Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>